[package]
name = "akatsuki-pp-py"
version = "1.0.5"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "akatsuki_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
akatsuki-pp = { git = "https://github.com/75efb6/akatsuki-pp-rs-ob", rev = "52327ae86dfc3047a5211323d9266a669db8ff9d" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
